--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <title>EJS Example</title>
+</head>
+<body>
+    <h1>Tela de Login</h1>
+    <p><%= mensagem %></p>
+    <form action="/login" method="POST">
+        <label for="email">Usuário:</label>
+        <input type="text" id="email" name="email" required>
+        <br>
+        <label for="password">Senha:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <button type="submit">Entrar</button>
+    </form>
+</body>
+</html>
