--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -97,7 +96,6 @@
         }
     </style>
 </head>
-
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -127,16 +125,15 @@
             <form action="/cadastro" method="POST">
                 <div class="form-group mb-3">
                     <label for="nome">Nome</label>
-                    <input type="text" class="form-control" id="nome" placeholder="Digite seu nome" required>
+                    <input type="text" class="form-control" name="name" id="nomeCadastro" placeholder="Digite seu nome" required>
                 </div>
                 <div class="form-group mb-3">
                     <label for="emailCadastro">Email</label>
-                    <input type="email" class="form-control" id="emailCadastro" placeholder="Digite seu email" required>
+                    <input type="email" class="form-control" name="email" id="emailCadastro" placeholder="Digite seu email" required>
                 </div>
                 <div class="form-group mb-3">
                     <label for="senhaCadastro">Senha</label>
-                    <input type="password" class="form-control" id="senhaCadastro" placeholder="Digite sua senha"
-                        required>
+                    <input type="password" class="form-control" name="password" id="senhaCadastro" placeholder="Digite sua senha" required>
                 </div>
                 <button type="submit" class="btn btn-main btn-block">Cadastrar</button>
                 <p class="text-center mt-3">Já tem uma conta? <a href="#">Faça login</a>.</p>
@@ -152,5 +149,4 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
 </html>
