--- a/views/favoritos.ejs
+++ b/views/favoritos.ejs
@@ -129,7 +129,7 @@
                     <h5 class="mt-3">Caneta Gel 0.5mm Molin</h5>
                     <p class="text-main">R$ 24,50</p>
                     <div class="d-flex justify-content-between align-items-center">
-                        <a href="carrinho.html" class="btn btn-main">Comprar</a>
+                        <a href="/carrinho" class="btn btn-main">Comprar</a>
                         <i class="fas fa-heart remove-favorite" title="Remover dos Favoritos"></i>
                     </div>
                 </div>
