--- a/views/carrinho.ejs
+++ b/views/carrinho.ejs
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
         <div class="container">
             <div class="navbar-brand fw-bold">
-                <img src="papelaria.jpg" alt="Logo Viva Colors" style="height: 50px;">
+                <img src="/images/logo.jpg" alt="Logo Viva Colors" style="height: 50px;">
                 Viva Colors
             </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
