--- a/views/historico.ejs
+++ b/views/historico.ejs
@@ -106,7 +106,7 @@
                         <a class="nav-link" href="#">Configurações</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Sair</a>
+                        <a class="nav-link" href="/logout">Sair</a>
                     </li>
                 </ul>
             </div>
