--- a/views/login.ejs
+++ b/views/login.ejs
@@ -105,10 +105,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="">Login</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/">Início</a></li>
                     <li class="nav-item"><a class="nav-link" href="cadastro">Cadastro</a></li>
-                    <li class="nav-item"><a class="nav-link" href="conta.html">Minha Conta</a></li>
                 </ul>
             </div>
         </div>
@@ -121,17 +119,17 @@
             <form action="/login" method="POST">
                 <div class="form-group mb-3">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Digite seu email" required>
+                    <input type="text" class="form-control" name="email" id="email" placeholder="Digite seu email" required>
                 </div>
                 <div class="form-group mb-3">
                     <label for="password">Senha</label>
-                    <input type="password" class="form-control" id="password" placeholder="Digite sua senha" required>
+                    <input type="password" class="form-control" name="password" id="password" placeholder="Digite sua senha" required>
                 </div>
                 <button type="submit" class="btn btn-main btn-block">Entrar</button>
                 <p>
                     <%= mensagem %>
                 </p>
-                <p class="text-center mt-3">Não tem uma conta? <a href="/cadastro">Cadastre-se</a></p>
+                <p class="text-center mt-3">Não tem uma conta? <a href="/cadastro">Cadastre-se</a>.</p>
             </form>
         </div>
     </div>
