--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -148,7 +148,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" href="conta-">Minha Conta</a>
+                        <a class="nav-link active" href="conta">Minha Conta</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="historico">Histórico de Pedidos</a>
@@ -198,7 +198,6 @@
                             <td><%= usuario.name %></td>
                             <td><%= usuario.email %></td>
                             <td>
-                                <button class="btn btn-warning">Atualizar</button>
                                 <a href="/delete/<%=usuario.id%>"><button class="btn btn-danger">Remover</button></a>
                             </td>
                         </tr>
