--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -121,7 +121,7 @@
     <div class="container my-5" id="cadastro">
         <div class="form-container">
             <h1 class="text-center">Cadastro</h1>
-            <form action="/cadastro" method="POST">
+            <form action="cadastro" method="POST">
                 <div class="form-group mb-3">
                     <label for="nome">Nome</label>
                     <input type="text" class="form-control" name="name" id="name" placeholder="Digite seu nome" required>
