--- a/views/login.ejs
+++ b/views/login.ejs
@@ -106,7 +106,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="/">Início</a></li>
-                    <li class="nav-item"><a class="nav-link" href="cadastro">Cadastro</a></li>
+                    <li class="nav-item"><a class="nav-link" href="user/cadastro">Cadastro</a></li>
                 </ul>
             </div>
         </div>
@@ -129,7 +129,7 @@
                 <p>
                     <%= mensagem %>
                 </p>
-                <p class="text-center mt-3">Não tem uma conta? <a href="/cadastro">Cadastre-se</a>.</p>
+                <p class="text-center mt-3">Não tem uma conta? <a href="cadastro">Cadastre-se</a>.</p>
             </form>
         </div>
     </div>
