--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -201,8 +201,7 @@
                                     <%= usuario.email %>
                                 </td>
                                 <td>
-                                    <a href="/delete/<%=usuario.id%>"><button
-                                            class="btn btn-danger">Remover</button></a>
+                                    <a href="/delete/<%=usuario.id%>"><button class="btn btn-danger">Remover</button></a>
                                 </td>
                             </tr>
                         <% }); %>
