--- a/views/conta.ejs
+++ b/views/conta.ejs
@@ -125,7 +125,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="conta">Minha Conta</a>
+                        <a class="nav-link active" aria-current="page" href="/">Produtos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/historico">Histórico de Pedidos</a>
